# coinbase-playground

./: .gitignore  Cargo.toml  devenv.nix  flake.nix  justfile  readme.md
config/: bitcoin.conf
esplora-frontend/: app.js  index.html  notfound.html  style-rtl.css
scripts/: Cargo.toml
scripts/src/: mine_and_send.rs  mine_ctv_coinbase.rs  mine_layered_ctv_coinbase.rs  parse_witness.rs
