[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.18"
bitcoin = "0.31"
rand = "0.8"
hex = "0.4"

[[bin]]
name = "mine_and_send"
path = "src/mine_and_send.rs"

[[bin]]
name = "mine_ctv_coinbase"
path = "src/mine_ctv_coinbase.rs"

[[bin]]
name = "parse_witness"
path = "src/parse_witness.rs"
